fix: update navigation link styles for improved visibility and consistency

--- a/css/templatestyles.css
+++ b/css/templatestyles.css
@@ -25,20 +25,19 @@ button:focus{outline:none}.nav,button{outline:0}.btn{text-decoration:none;backgr
 #nav-wrap{float:none;padding:0;position:relative}
 .nav{background:#2f3f5e;position:fixed;width:100%;height:18.67vw;z-index:3;color:#fff;top:30px;border-bottom:2px solid #212f4a;overflow:hidden}
 .nav-link{text-decoration:none;padding:8px 14px 8px 8px;position:relative;color:inherit;font-weight:400}
-/* .nav-link.selected{color:#fff;text-shadow:1px 1px 0 #bc5a15,-1px 1px 0 #bc5a15,-1px -1px 0 #bc5a15,1px -1px 0 #bc5a15} */
-a.nav-link.selected::after{content:'';position:absolute;bottom:8px;left:15%;width:70%;height:2px;background-color:#bc5a15}
-
+a.nav-link.selected,a.nav-link.selected:hover{text-underline-offset: 0;text-decoration:underline;text-decoration-color:#bc5a15;text-decoration-thickness:2px;text-decoration-skip-ink:auto;text-underline-position:under}
+a.nav-link.selected:hover{cursor:default}
+a.nav-link:hover,.dropbtn:hover, .dropbtn:focus,.nav-dd-link{text-decoration:underline;text-decoration-color:#d2d2d2;text-decoration-thickness:1px;text-decoration-skip-ink:auto;text-underline-position:under}
 #nav-brand{display:inline-block;max-width:calc(100vw - 62px);padding:3px 12px 0 0;padding-left:calc(10vw / 3)}
 .nav a{display:block;padding:8px 15px}
-
-.dropbtn{cursor:pointer}
-.dropbtn:hover,.dropbtn:focus{text-decoration: underline; text-underline-offset: 2px;}
+.dropbtn{cursor:pointer;text-underline-offset: 2px;}
 #dropbtn-arrow{font-size:10px}
 
 .dropdown{position:relative;display:inline-block;padding:8px 15px}
 .dropdown-content{display:none;background-color:#303f5e;min-width:254px;margin-left:15px;z-index:1;left:0;position:relative}
-.dropdown-content a{color:#fff;padding:12px 16px;text-decoration:none;display:block}
-.dropdown-content a:hover{text-decoration: underline; text-underline-offset: 2px;}
+.nav-dd-link {color:#fff;padding:12px 16px;text-decoration:none;display:block}
+ .dropdown-content a{color:#fff;padding:12px 16px;text-decoration:none;display:block}
+.dropdown-content a:hover{text-decoration: underline; text-underline-offset: 2px;} 
 
 .show{display:block}
 .bar1,.bar2,.bar3{width:30px;height:3.25px;background-color:#f1f1f1;margin:6.5px 0;transition:.4s}.change .bar1{transform:rotate(-45deg) translate(-9px,6px)}.change .bar2{opacity:0}.change .bar3{transform:rotate(45deg) translate(-8px,-4px)}
